--- a/src/components/UI/InviteFriend/InviteFriend.scss
+++ b/src/components/UI/InviteFriend/InviteFriend.scss
@@ -6,7 +6,7 @@
     position: relative;
     width: 70vw;
     height: calc(70vw * 0.6);
-    top: 5vw;
+    top: 1vw;
     margin: auto;
     background-image: url("../../../assets/img/level_back.png");
     background-repeat: no-repeat;
