--- a/src/components/UI/JoinGame/JoinGame.scss
+++ b/src/components/UI/JoinGame/JoinGame.scss
@@ -12,7 +12,7 @@
     width: 70vw;
     height: calc(70vw * 0.6);
     margin: auto;
-    top: 5vw;
+    top: 1vw;
     background-image: url("../../../assets/img/level_back.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
